	- regenerate with Automake 1.11.6.
	- use LF line endings throughout the sources.
	- add initial, experimental TI-80 VSC support, by Randy Compton.
	- convert README to UTF-8.
	- add a Nspire error code related to OS extensions on OS versions which do not support them; add OS sending to test_ticalcs_2.


- 14/12/2011, version 1.1.7: debrouxl
	- add error code returned by the Nspire when the anti-downgrade protection refuses an OS version older than the configured minimum version.
	- add support for getting screenshots from Nspire CX calculators.
	- nsp_rpkt.c: add a mode for dumping at most 12 bytes of the virtual packet, and make it default.
	- upgrade COPYING files and FSF addresses embedded in files, so as to make rpmlint happier.
	- dusb_cmd.c: cmd_r_var_content(): print size correctly.
	- reconfigure with autoconf 2.68 and libtool 2.4.
	- reconfigure with libtool 2.4.2.
	- take a whack at hundreds of NULL pointer dereferences by sanitizing function arguments.
	- move the workaround for file transfers of peculiar sizes mainly to libticalcs.
	- fix the incorrect reporting of Flashapps' sizes for 73 / 83+ family, when the DBUS protocol is used (SF bug #3440569). Reported and patched by Benjamin Moody, tested by Benjamin and Lionel.
	- if we're talking to a 73, don't try to test for 83+SE. The oldest 73 OS versions don't support get_version. Reported by Benjamin Moody, fix discussed by Lionel and Benjamin.
	- add error code returned by DUSB protocol calcs when refusing a FlashApp whose signature does not match. Reported by Albert H.
	- upgrade version of gettext to 0.17, released in late 2007.
	- add error code returned by Nspires when they're out of memory. Reported by XseuguhX.


- 28/05/2011, version 1.1.6: debrouxl
	- remove autogenerated Changelog files and empty TRANSLATORS files.
	- change encoding in .rc file.
	- update the documentation of a number of functions in calc_xx.c.